--- a/RASD/requirements.sty
+++ b/RASD/requirements.sty
@@ -28,6 +28,12 @@
     \textbf{Post-Conditions} & #1 \tabularnewline
     \hline
 }
+\newcommand{\epoint}[1]{
+	\hline
+    \textbf{Exentension Points} & #1 \tabularnewline
+    \hline
+}
+
 \newcommand{\bflow}[1]{%
     \textbf{Basic Flow} & 
     \begin{enumerate}
